2011-08-03  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/admin_gtk.py:
	* flumotion/component/producers/fms/fms.glade:
	* flumotion/component/producers/fms/fms.py:
	Improvements on how we display the information in the admin.

2011-06-29  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/component/producers/fms/fms.py:
	There is no need of sending flumotion-reset anymore!

2011-04-06  Theodoros Paschidis <tpaschidis@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Nasty little space.

2011-04-05  Theodoros Paschidis <tpaschidis@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Fixed the case where we get into an infinite loop in case we recieve
	a start code of unknown nal_unit_type.

2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Lower log level of some messages

2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* README:
	* flumotion/component/producers/fms/Makefile.am:
	* flumotion/component/producers/fms/admin_gtk.py:
	* flumotion/component/producers/fms/fms.glade:
	* flumotion/component/producers/fms/fms.py:
	* flumotion/component/producers/fms/fms.xml:
	Added two tabs to better debug the input connections to fms producer.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Discard requests to clear metadata.
	We take care of clearing metadata when we receive changes in the
	metadata. There is no need for us to it to clear it in the
	@clearDataFrame handler.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Allow receiving audio stream headers before metadata.
	When the audio tag containing the sequence header comes before
	the new metadata and the codec didn't change we have to keep the
	header and send it later.
