@@ -1,3 +1,14 @@
+2011-09-14  Xavier Queralt  <xqueralt@flumotion.com>
+
+	* flumotion/component/producers/fms/admin_gtk.py:
+	* flumotion/component/producers/fms/fms.py:
+	Add information and warning messages to the component when something
+	happens:
+	  - new client connects, disconnects, publishes, unpublishes
+	  - the client isn't publishing video or audio
+	  - The client tried to publish using a wrong mount point
+	  - A client is trying to publish but we already have one
+
 2011-08-03  Xavier Queralt  <xqueralt@flumotion.com>
 
 	reviewed by: jribas
